--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "bcryptjs": "^2.4.3",
     "connect-mongodb-session": "^3.0.0",
     "csurf": "^1.11.0",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongodb": "^4.1.0",
     "multer": "^1.4.3",
+    "nodemailer": "^6.9.14",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
